--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -39,7 +39,7 @@
         {% endif %}
 
         <p>
-          <a href="barebones/">Bare Bones</a>
+          <a href="/redux-notebook/barebones/">Bare Bones</a>
         </p>
       </header>
       <section>
